--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -26,5 +26,12 @@
             "inactive": "<strong>Inactif</strong> : le dernier message reçu dans le salon date de plus d'une semaine.",
             "new": "<strong>Nouveau</strong> : le salon a été crée il y a moins d'une semaine."
         }
+    },
+    "typeHeaderTooltip": {
+        "title": "Type du salon",
+        "content": {
+            "personnal": "<strong>Priveé</strong> : le salon ne possède pas plus de deux utilisateurs.",
+            "multiple": "<strong>A plusieurs</strong> : le salon possède plus de deux utilisateurs."
+        }
     }
 }
