--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -30,7 +30,7 @@
     "typeHeaderTooltip": {
         "title": "Type du salon",
         "content": {
-            "personnal": "<strong>Priveé</strong> : le salon ne possède pas plus de deux utilisateurs.",
+            "personnal": "<strong>Privé</strong> : le salon ne possède pas plus de deux utilisateurs.",
             "multiple": "<strong>A plusieurs</strong> : le salon possède plus de deux utilisateurs."
         }
     }
