--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -22,16 +22,16 @@
     "statusHeaderTooltip": {
         "title": "Statut du salon",
         "content": {
-            "active": "<strong>Actif</strong> : le dernier message reçu dans le salon date de moins d'une semaine.",
-            "inactive": "<strong>Inactif</strong> : le dernier message reçu dans le salon date de plus d'une semaine.",
+            "active": "<strong>Actif</strong> : le dernier message posté dans le salon date de moins d'une semaine.",
+            "inactive": "<strong>Inactif</strong> : le dernier message posté dans le salon date de plus d'une semaine.",
             "new": "<strong>Nouveau</strong> : le salon a été crée il y a moins d'une semaine."
         }
     },
     "typeHeaderTooltip": {
         "title": "Type du salon",
         "content": {
-            "personnal": "<strong>Privé</strong> : le salon ne possède pas plus de deux utilisateurs.",
-            "multiple": "<strong>A plusieurs</strong> : le salon possède plus de deux utilisateurs."
+            "personnal": "<strong>Privé</strong> : le salon ne compte pas plus de deux utilisateurs.",
+            "multiple": "<strong>A plusieurs</strong> : le salon compte plus de deux utilisateurs."
         }
     }
 }
