--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -17,7 +17,7 @@
         "nonDirectRoomsCount": "Salons a plusieurs, nouveaux ou actifs",
         "directRoomsCount": "Salons privés, nouveaux ou actifs",
         "administrateButton": "Administrer les salons",
-        "noRoomsMessage": "<strong>Cette installation de Watcha ne possède aucun salon.<br/>Vous pouvez en créer un dans l'onglet \"Salons\", via le bouton \"Nouveau salon\".</strong>"
+        "noRoomsMessage": "<strong>Cette installation de Watcha ne possède aucun salon.<br/>Vous pouvez en créer un dans l'onglet \"Salons\".</strong>"
     },
     "applicationPanel": {
         "title": "Application",
