--- a/public/locales/fr/usersTab.json
+++ b/public/locales/fr/usersTab.json
@@ -1,7 +1,7 @@
 {
     "title": "Utilisateurs",
     "searchBoxPlaceholder": "Filtrer les utilisateurs",
-    "button": "Nouvel utilisateur",
+    "button": "Créer un nouvel utilisateur",
     "fullName": "Nom complet",
     "emailAddress": "Adresse électronique",
     "synapseAdminCheckbox": "Attribuer le rôle d'administrateur à cet utilisateur",
