--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -26,8 +26,8 @@
     "statusHeaderTooltip": {
         "title": "Room status",
         "content": {
-            "active": "<strong>Active</strong>: the last message received in the room was less than a week ago",
-            "inactive": "<strong>Inactive</strong>: the last message received in the living room was more than a week ago",
+            "active": "<strong>Active</strong>: the last message received in this room was less than a week ago",
+            "inactive": "<strong>Inactive</strong>: the last message received in this room was more than a week ago",
             "new": "<strong>New</strong>: the room was created less than a week ago"
         }
     },
