--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -1,7 +1,7 @@
 {
     "title": "Salons",
     "searchBoxPlaceholder": "Filtrer les salons",
-    "button": "Créer un nouveau salon",
+    "button": "Nouveau salon",
     "headers": {
         "name": "Nom",
         "creator": "Créateur",
