feat: addition of a tooltip on NewItemButton

--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -24,6 +24,7 @@
         "role": "Role",
         "status": "Status"
     },
+    "buttonTooltip": "Creation of new user",
     "statusHeaderTooltip": {
         "title": "Account status",
         "content": {
