--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -24,7 +24,7 @@
         "role": "Role",
         "status": "Status"
     },
-    "buttonTooltip": "Creation of new user",
+    "buttonTooltip": "Create a new user",
     "statusHeaderTooltip": {
         "title": "Account status",
         "content": {
