Watcha OP415  addition of new icon (#44)
* feat: addition of new icon

* feat: modification of icon for new room

* feat: re-addition of new room and new user icon

* feat: addition of a tooltip on NewItemButton

* i18n: better wording

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -17,7 +17,7 @@
         "nonDirectRoomsCount": "Multiple active rooms",
         "directRoomsCount": "Private active rooms",
         "administrateButton": "Administrate rooms",
-        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>You can create one in the \"Rooms\" tab with the \"New room\" button.</strong>"
+        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>You can create one in the \"Rooms\" tab.</strong>"
     },
     "applicationPanel": {
         "title": "Application",
