--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -23,6 +23,7 @@
         "enabled": "Ouvrir ce salon dans un nouvel onglet",
         "disabled": "Vous n'êtes pas membre de ce salon"
     },
+    "buttonTooltip": "Créer un nouveau salon",
     "statusHeaderTooltip": {
         "title": "Statut du salon",
         "content": {
