--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -23,6 +23,7 @@
         "enabled": "Open this room in a new tab",
         "disabled": "You are not a member of this room"
     },
+    "buttonTooltip": "Create a new room",
     "statusHeaderTooltip": {
         "title": "Room status",
         "content": {
