--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -37,7 +37,7 @@
         "content": {
             "administrator": "<strong>Administrator</strong>: user who has access to all Watcha features, including this administration console. He cannot, however, access rooms in which he's not a member.",
             "collaborator": "<strong>Collaborator</strong>: user with the right to create rooms and invite existing users or new partners to them; he doesn't have access to other rooms. He's usually an employee of your organization.",
-            "partner": "<strong>Partner</strong>: user only has access to the room for which he has been invited; he doesn't have access to the member directory unless he's promoted to room administrator. He's usually a guest from outside your organization."
+            "partner": "<strong>Partner</strong>: user with restricted privileges, invited by an administrator or a collaborator, he is not allowed to create rooms, invite other user, and he doesn't have access to the member directory unless he's promoted to room administrator. He's usually a guest from outside your organization."
         }
     },
     "roles": {
