--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -36,9 +36,9 @@
     "roleHeaderTooltip": {
         "title": "User role",
         "content": {
-            "administrator": "<strong>Administrator</strong>: user who has access to all Watcha features, including this administration console. He cannot, however, access rooms in which he's not a member.",
-            "collaborator": "<strong>Collaborator</strong>: user with the right to create rooms and invite existing users or new partners to them; he doesn't have access to other rooms. He's usually an employee of your organization.",
-            "partner": "<strong>Partner</strong>: user with restricted privileges, invited by an administrator or a collaborator, he is not allowed to create rooms, invite other user, and he doesn't have access to the member directory unless he's promoted to room administrator. He's usually a guest from outside your organization."
+            "administrator": "<strong>Administrator</strong>: user having access to all Watcha features, including this administration console. He cannot, however, access rooms in which he's not a member.",
+            "collaborator": "<strong>Collaborator</strong>: user having the right to create rooms and invite existing users or new partners to them; he doesn't have access to other rooms. He's usually an employee of your organization.",
+            "partner": "<strong>Partner</strong>: user having access only to the room for which he has been invited and not being allowed to create rooms. However, he doesn't have access to the member directory unless he's promoted to room administrator. He's usually a guest from outside your organization."
         }
     },
     "roles": {
