Watcha op398 defined tooltip message on admin (#42)
* all changes squashed in one from branch watcha-OP394-improvement-of-dashbordTab

* style: change name of roomsPanel.

* fix: typo

* fix: remove duplicate css class

* fix: remove erroneous property

* style: format

* fix: deletion of useless dot in tooltip message

* style: modification of inappropriate 'unset' css attribut

* refactor: include AdministrateButton in children component.

* style: changing wording

* all changes after first review on PR#39

* feat: deletion of useless import

* feat: change ExpandButton by Accordion

* all changes after second review on PR#39

* feat: change value of admin name on AdministratorsList

* fix: deletion of useless interpolation

* fix: deletion of useless code

* fix: deletion of useless console.log

* style: changing the wording of tooltip messages

* feat: handle display and wording of noRoomMessage

* style: changing the wording of RoomPanelDashboard labels

* refactor: UserAccountStatusHeader into HeaderTooltip

* style: better wording for room status

* feat: addition of HeaderTooltip on room 'Status' header

* format: prettier in HeaderTooltip

* feat: addition of HeaderTooltip on user 'Role' header

* fix: lower case on i18n spacename

* i18n: better wording for 'pendingInvitation'

* refactor: Tooltip into LabelTooltip

* i18n: change wording for pendingInvitation

* i18n: addition of 'typeHeaderTooltip' namespace from OP390

* feat: addition of LabelTooltip

* i18n: wording standardization for 'Room'

* i18n: spelling correction

* i18n: deletion of spaces before ':'

* i18n: spelling correction

* feat: change name of tooltip logo

* feat: better code syntax

* i18n: same traduction on english and french for 'noRoomMessage'

* Watcha op390 re add type column (#43)

* feat: re-addition of 'Type' column

* feat: addition of HeaderTooltip on 'Type' column

* i18n: spelling corr

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -14,10 +14,10 @@
     },
     "roomsPanel": {
         "title": "Rooms",
-        "nonDirectRoomsCount": "New or active rooms",
-        "directRoomsCount": "New or active one-to-one conversations",
+        "nonDirectRoomsCount": "Multiple active rooms",
+        "directRoomsCount": "Private active rooms",
         "administrateButton": "Administrate rooms",
-        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>Return to Watcha to create a first room (button \"+\").</strong>."
+        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>You can create one in the \"Rooms\" tab.</strong>"
     },
     "applicationPanel": {
         "title": "Application",
