--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -14,10 +14,10 @@
     },
     "roomsPanel": {
         "title": "Salons",
-        "nonDirectRoomsCount": "Conversations a plusieurs nouvelles ou actives",
-        "directRoomsCount": "Conversations privées nouvelles ou actives",
+        "nonDirectRoomsCount": "Salons à plusieurs actifs",
+        "directRoomsCount": "Salons privés actifs",
         "administrateButton": "Administrer les salons",
-        "noRoomsMessage": "<strong>Cette installation de Watcha n'a encore aucun salon.<br/>Retournez sur Watcha  pour creer un premier Salon (bouton \"+\").</strong>"
+        "noRoomsMessage": "<strong>Cette installation de Watcha ne compte aucun salon.<br/>Vous pouvez en créer un dans l'onglet \"Salons\".</strong>"
     },
     "applicationPanel": {
         "title": "Application",
