--- a/public/locales/fr/usersTab.json
+++ b/public/locales/fr/usersTab.json
@@ -24,12 +24,21 @@
         "role": "Rôle",
         "status": "Statut"
     },
-    "statusHelp": {
+    "buttonTooltip": "Créer un nouvel utilisateur",
+    "statusHeaderTooltip": {
         "title": "Statut du compte",
         "content": {
-            "active": "<strong>Activé</strong> : l'utilisateur peut se connecter à Watcha.",
+            "active": "<strong>Activé</strong> : l'utilisateur peut se connecter à Watcha",
             "inactive": "<strong>Désactivé</strong> : l'utilisateur ne peut pas se connecter à Watcha. Un utilisateur désactivé peut être réactivé ; un email lui demandant de définir un nouveau mot de passe lui sera envoyé.",
-            "invited": "<strong>Invitation envoyée</strong> : un email d'invitation a été envoyé à l'utilisateur, mais ce dernier n'a pas encore finalisé la procédure d'inscription, et ne s'est pas encore connecté à Watcha."
+            "invited": "<strong>Invitation en attente</strong> : un email d'invitation a été envoyé à l'utilisateur, mais ce dernier n'a pas encore finalisé la procédure d'inscription, et ne s'est pas encore connecté à Watcha"
+        }
+    },
+    "roleHeaderTooltip": {
+        "title": "Rôle de l'utilisateur",
+        "content": {
+            "administrator": "<strong>Administrateur</strong> : utilisateur ayant accès à toutes les fonctionnalités de Watcha, dont cette console d'administration. Il ne peut néanmoins pas accéder aux salons dont il n'est pas membre.",
+            "collaborator": "<strong>Collaborateur</strong> : utilisateur ayant le droit de créer des salons et d'y inviter des utilisateurs existants, ou de nouveaux partenaires ; il n'a pas accès aux autres salons. Il s'agit habituellement d'un employé de votre organisation.",
+            "partner": "<strong>Partenaire</strong> : utilisateur avec des privilèges restreints, invité par un administrateur ou un collaborateur, il n'est pas autorisé à créer des salons, à inviter d'autres utilisateurs, et il n'a pas accès au répertoire des utilisateurs, sauf s'il est promu administrateur. Il s'agit généralement d'un invité extérieur à votre organisation."
         }
     },
     "roles": {
@@ -40,6 +49,6 @@
     "status": {
         "active": "Compte activé",
         "inactive": "Compte désactivé",
-        "invited": "Invitation envoyée"
+        "invited": "Invitation en attente"
     }
 }
