--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -13,11 +13,11 @@
         "expand": "Voir un aperçu des administrateurs"
     },
     "roomsPanel": {
-        "title": "Salons",
+        "title": "Conversations",
         "nonDirectRoomsCount": "Nombre total de salons",
         "nonDirectActiveRoomsCount": "Nombre total de salons actifs",
-        "administrateButton": "Administrer les salons",
-        "noRoomsMessage": "<strong>Cette installation de Watcha ne compte aucun salon.<br/>Vous pouvez en créer un dans l'onglet \"Salons\".</strong>"
+        "administrateButton": "Administrer les conversations",
+        "noRoomsMessage": "<strong>Cette installation de Watcha ne compte aucunes conversations.<br/>Vous pouvez en créer un dans l'onglet \"Conversations\".</strong>"
     },
     "applicationPanel": {
         "title": "Application",
