--- a/public/locales/fr/usersTab.json
+++ b/public/locales/fr/usersTab.json
@@ -36,9 +36,9 @@
     "roleHeaderTooltip": {
         "title": "Rôle de l'utilisateur",
         "content": {
-            "administrator": "<strong>Administrateur</strong> : utilisateur ayant accès à toutes les fonctionnalités de Watcha, dont cette console d'administration. Il ne peut néanmoins pas accéder aux salons dont il n'est pas membre.",
-            "collaborator": "<strong>Collaborateur</strong> : utilisateur ayant le droit de créer des salons et d'y inviter des utilisateurs existants, ou de nouveaux partenaires ; il n'a pas accès aux autres salons. Il s'agit habituellement d'un employé de votre organisation.",
-            "partner": "<strong>Partenaire</strong> : utilisateur avec des privilèges restreints, invité par un administrateur ou un collaborateur, il n'est pas autorisé à créer des salons, à inviter d'autres utilisateurs, et il n'a pas accès au répertoire des utilisateurs, sauf s'il est promu administrateur. Il s'agit généralement d'un invité extérieur à votre organisation."
+            "administrator": "<strong>Administrateur</strong> : utilisateur ayant accès à toutes les fonctionnalités de Watcha, dont cette console d'administration. Il ne peut néanmoins pas accéder aux conversations dont il n'est pas membre.",
+            "collaborator": "<strong>Collaborateur</strong> : utilisateur ayant le droit de créer des conversations et d'y inviter des utilisateurs existants, ou de nouveaux partenaires ; il n'a pas accès aux autres conversations. Il s'agit habituellement d'un employé de votre organisation.",
+            "partner": "<strong>Partenaire</strong> : utilisateur avec des privilèges restreints, invité par un administrateur ou un collaborateur, il n'est pas autorisé à créer des conversations, à inviter d'autres utilisateurs, et il n'a pas accès au répertoire des utilisateurs, sauf s'il est promu administrateur. Il s'agit généralement d'un invité extérieur à votre organisation."
         }
     },
     "roles": {
