--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -14,8 +14,8 @@
     },
     "roomsPanel": {
         "title": "Conversations",
-        "nonDirectRoomsCount": "Number of rooms",
-        "nonDirectActiveRoomsCount": "Number of active rooms",
+        "regularRoomsCount": "Number of rooms",
+        "regularActiveRoomsCount": "Number of active rooms",
         "administrateButton": "Administrate conversations",
         "noRoomsMessage": "<strong>This Watcha installation does not have any conversations yet.<br/>You can create one in the \"Conversations\" tab.</strong>"
     },
