--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -37,7 +37,7 @@
         "title": "User role",
         "content": {
             "administrator": "<strong>Administrator</strong>: user having access to all Watcha features, including this administration console. He cannot, however, access conversations in which he's not a member.",
-            "collaborator": "<strong>Collaborator</strong>: user having the right to create conversations and invite existing users or new partners to them; he doesn't have access to other conversations. He's usually an employee of your organization.",
+            "collaborator": "<strong>Collaborator</strong>: user allowed to create conversations and invite existing users or new partners to them; he doesn't have access to other conversations. He's usually an employee of your organization.",
             "partner": "<strong>Partner</strong>: user having access only to the room for which he has been invited and not being allowed to create conversations. However, he doesn't have access to the member directory unless he's promoted to room administrator. He's usually a guest from outside your organization."
         }
     },
